--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -30,3 +30,10 @@ body {
   padding: 0;
   overflow-y: hidden;
 }
+
+.top-nav {
+  background-color: #31516a;
+  width: 100%;
+  height: 35px;
+  padding: 10px;
+}
