--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -67,6 +67,77 @@ body {
   transition: 0.4s flex;
 }
 
+.assist-panel {
+  position: relative;
+  flex: 0 0 200px;
+  overflow-x: hidden;
+  white-space: nowrap;
+  -webkit-transition: 0.4s flex;
+  -moz-transition: 0.4s flex;
+  -ms-transition: 0.4s flex;
+  transition: 0.4s flex;
+}
+
+.assist-hidden {
+  flex: 0;
+}
+
+.assist-panel .assist {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.resizer {
+  height: 100%;
+  position: absolute;
+  width: 4px;
+  cursor: col-resize;
+}
+
+.resize-bar {
+  position: absolute;
+  height: 100%;
+  width: 2px;
+  background-color: #F1F1F1;
+}
+
+.hide-assist {
+  position: absolute;
+  top: 2px;
+  right: 4px;
+  z-index: 1000;
+  color: #D1D1D1;
+  font-size: 12px;
+  -webkit-transition: margin-right 0.2s linear, color 0.5s ease;
+  -moz-transition: margin-right 0.2s linear, color 0.5s ease;
+  -ms-transition: margin-right 0.2s linear, color 0.5s ease;
+  transition: margin-right 0.2s linear, color 0.5s ease;
+}
+
+.show-assist {
+  position: absolute;
+  top: 2px;
+  left: 8px;
+  font-size: 12px;
+  margin-left: 0;
+  -webkit-transition: margin-left 0.2s linear;
+  -moz-transition: margin-left 0.2s linear;
+  -ms-transition: margin-left 0.2s linear;
+  transition: margin-left 0.2s linear;
+}
+
+.show-assist:hover {
+  margin-left: 2px;
+}
+
+.hide-assist:hover {
+  margin-right: 2px;
+  color: #338bb8;
+}
+
 .left-nav-visible {
   flex: 0 0 15em;
   background-color: lightgrey;
@@ -76,6 +147,7 @@ body {
 .page-content {
   flex: 2;
   padding: 1em;
+  position: relative;
 }
 
 h1 {
