HUE-5036 [editor] Improve tag editor UX
- Added spinner
- Click anywhere to start edit
- Placeholder when empty

(cherry picked from commit c72a8b147d09c86f656f1997018382df3a8b4c86)

--- a/desktop/core/src/desktop/static/desktop/ext/css/selectize.css
+++ b/desktop/core/src/desktop/static/desktop/ext/css/selectize.css
@@ -401,3 +401,9 @@
   opacity: 0.5;
   background-color: #fafafa;
 }
+
+.selectize-no-tags {
+  color: #999;
+  margin-top: 4px;
+  margin-right: 4px;
+}
