HUE-5074 [chart] Timeline tooltip can make the graph flicker
(cherry picked from commit 4a7dc796ae50aec57f328c46ac2bb7a6e202763b)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3106,7 +3106,7 @@ input[type='password']::-ms-reveal {
 }
 
 .ui-widget {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto,Arial,sans-serif;
   font-size: 1em;
 }
 
@@ -3118,7 +3118,7 @@ input[type='password']::-ms-reveal {
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto,Arial,sans-serif;
   font-size: 1em;
 }
 
