PR436 [hive] Multiple Hive sessions for Tez
https://github.com/cloudera/hue/pull/436

* Add session_guid information to operations

* Mark and save hiveserver2 session as invalid on error

* Better error message on missing handle fields for snippet

* Allow multiple concurrent Hive operations by using multiple sessions

* Fixed help string for max_number_of_sessions configuration parameter

* Use 40 user documents instead of 100 when checking busy HS2 sessions

(cherry picked from commit 874d728a8699c421f4620fabbae3bbbd1f71340d)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -897,6 +897,9 @@
   # This will free all the query resources in HiveServer2, but also make its results inaccessible.
   ## close_queries=false
 
+  # Hue will use at most this many HiveServer2 sessions per user at a time
+  ## max_number_of_sessions=1
+
   # Thrift version to use when communicating with HiveServer2.
   # New column format is from version 7.
   ## thrift_version=7
