HUE-5098 [oozie] Swap readonly Codemirror to Ace
(cherry picked from commit c4120a4860b366104e59ca10c07d433af9dd2bd4)

--- a/apps/oozie/src/oozie/static/oozie/css/coordinator.css
+++ b/apps/oozie/src/oozie/static/oozie/css/coordinator.css
@@ -1,5 +1,6 @@
-.CodeMirror.cm-s-default {
-  height:500px;
+#definitionEditor {
+  min-height: 250px;
+  margin-bottom: 10px;
 }
 
 .tooltip-inner {
