Allow dbproxy classpath to be configurable

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -745,6 +745,9 @@
   ## Main flag to override the automatic starting of the DBProxy server.
   # enable_dbproxy_server=true
 
+  ## Classpath to be appended to the default DBProxy server classpath.
+  # dbproxy_extra_classpath=
+
 
 ###########################################################################
 # Settings to configure your Hadoop cluster.
