--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -922,6 +922,31 @@ div.box {
   border-radius: 0 3px 3px 0 !important;
 }
 
+.filechooser-tree .editable-breadcrumbs {
+  cursor: text;
+}
+
+.filechooser-tree .editable-breadcrumbs:hover {
+  background-color: #F0F0F0;
+}
+
+.filechooser-tree .editable-breadcrumb-input {
+  margin-left: 10px;
+  margin-bottom: 0;
+  border-radius: 2px;
+  border: 1px solid #EEE;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  width: 370px;
+  height: 20px;
+  line-height: 20px;
+  min-height: 20px;
+  font-size: 1.25em;
+  padding-left: 10px!important;
+}
+
+
 /*
  * jHueSelector
  */
