HUE-5107 [oozie] Restyle document autocomplete to look more like a dropdown
(cherry picked from commit 9c0227338bfa88b3b2db2aba43459508b5bd5f40)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3223,3 +3223,22 @@ input[type='password']::-ms-reveal {
   color: #ffffff;
   text-decoration: none;
 }
+
+.select-like {
+  display: inline-block;
+  position: relative;
+}
+
+.select-like input {
+  transition: none!important;
+  box-shadow: none!important;
+  border-radius: 4px!important;
+  cursor: pointer!important;
+}
+
+.select-like .fa {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 15px;
+}
