--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -2986,6 +2986,13 @@ input[type='password']::-ms-reveal {
   display: none;
 }
 
+.autocomplete-count {
+  position: absolute;
+  top: 2px;
+  right: 3px;
+  color: #999;
+}
+
 .ui-helper-hidden-accessible {
   border: 0;
   clip: rect(0 0 0 0);
