--- a/apps/security/src/security/static/security/css/security.css
+++ b/apps/security/src/security/static/security/css/security.css
@@ -323,3 +323,35 @@ h1.emptyMessage {
   margin-right: 6px;
   margin-top: 7px;
 }
+
+.typeahead.dropdown-menu {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.pager.mini {
+  display: none;
+}
+
+.pager.full {
+  display: inline-block;
+  text-align: left;
+  margin-right: 12px;
+}
+
+.pager.full .number-of-pages {
+  margin-right: 4px;
+}
+
+.pager-button {
+  cursor: pointer;
+}
+
+.pager-button.selected {
+  font-weight: bold;
+}
+
+.pager-size {
+  margin-bottom: 0;
+  width: 60px;
+}
