HUE-5161 [security] Speed up roles rendering
(cherry picked from commit fc58e04af41a8b8dc897e61487e2e2eb6d54d33f)

--- a/apps/security/src/security/static/security/css/security.css
+++ b/apps/security/src/security/static/security/css/security.css
@@ -328,3 +328,30 @@ h1.emptyMessage {
   max-height: 300px;
   overflow-y: auto;
 }
+
+.pager.mini {
+  display: none;
+}
+
+.pager.full {
+  display: inline-block;
+  text-align: left;
+  margin-right: 12px;
+}
+
+.pager.full .number-of-pages {
+  margin-right: 4px;
+}
+
+.pager-button {
+  cursor: pointer;
+}
+
+.pager-button.selected {
+  font-weight: bold;
+}
+
+.pager-size {
+  margin-bottom: 0;
+  width: 60px;
+}
