HUE-5153 [aws] Turn off default AWS account when not configured

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1259,7 +1259,7 @@
 [aws]
   [[aws_accounts]]
     # Default AWS account
-    [[[default]]]
+    ## [[[default]]]
       # AWS credentials
       ## access_key_id=
       ## secret_access_key=
