HUE-5253 [editor] Improve query time formatting on long running queries

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -34,6 +34,9 @@
   <script type="text/javascript" src="../static/desktop/ext/js/jasmine-2.3.4/boot.js"></script>
   <script type="text/javascript" src="../static/desktop/ext/js/jasmine-2.3.4/mock-ajax.js"></script>
 
+  <script type="text/javascript" src="../static/desktop/js/hue.utils.js"></script>
+  <script type="text/javascript" src="../static/desktop/spec/hueUtilsSpec.js"></script>
+
   <script type="text/javascript" src="../static/desktop/spec/apiHelperSpec.js"></script>
 
   <script type="text/javascript" src="../static/desktop/js/sqlAutocompleter.js"></script>
