HUE-3294 [assist] Adding refresh and filter icons to document panel
No-op currently

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -47,7 +47,7 @@ body {
   position: relative;
   flex: 1;
   height: 38px;
-  background-color: #31516A;
+  background-color: #003F6C;
   width: 100%;
   padding: 1em 0;
 }
