--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -43,6 +43,15 @@ body {
   overflow-y: hidden;
 }
 
+.content-wrapper {
+  flex: 1 1 100%;
+  position: relative;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  background-color: #FFF;
+}
+
 .top-nav {
   position: relative;
   flex: 1;
@@ -52,12 +61,37 @@ body {
   padding: 1em 0;
 }
 
-.content-wrapper {
-  position: relative;
-  display: flex;
-  flex: 1 1 100%;
+.left-panel,
+.right-panel {
   background-color: #FFF;
-  flex-direction: row;
+  flex: 0;
+  position: relative;
+  padding-top: 10px;
+  min-width: 250px;
+}
+
+.side-panel-closed {
+  min-width: 0;
+}
+
+.resizer {
+  flex: 0;
+  height: 100%;
+  min-width: 4px;
+  cursor: col-resize;
+}
+
+.resize-bar {
+  position: absolute;
+  height: 100%;
+  width: 2px;
+  background-color: #F1F1F1;
+}
+
+.page-content {
+  flex: 1;
+  padding: 1em;
+  position: relative;
 }
 
 .left-nav {
@@ -81,7 +115,6 @@ body {
   -ms-transition: 0.4s flex;
   transition: 0.4s flex;
 }
-
 
 .inactive-action,
 .inactive-action a {
@@ -114,8 +147,6 @@ body {
   color: #338BB8 !important;
 }
 
-/* Assist panel */
-
 .assist-hidden {
   flex: 0;
 }
@@ -128,65 +159,44 @@ body {
   bottom: 0;
 }
 
-.resizer {
-  height: 100%;
-  position: absolute;
-  width: 4px;
-  cursor: col-resize;
-}
-
-.resize-bar {
-  position: absolute;
-  height: 100%;
-  width: 2px;
-  background-color: #F1F1F1;
-}
-
-.hide-assist {
+.side-panel-toggle {
   position: absolute;
   top: 2px;
-  right: 4px;
+  margin: 0;
   z-index: 1000;
   color: #D1D1D1;
   font-size: 12px;
-  -webkit-transition: margin-right 0.2s linear, color 0.5s ease;
-  -moz-transition: margin-right 0.2s linear, color 0.5s ease;
-  -ms-transition: margin-right 0.2s linear, color 0.5s ease;
-  transition: margin-right 0.2s linear, color 0.5s ease;
+  -webkit-transition: margin 0.2s linear, color 0.5s ease;
+  -moz-transition: margin 0.2s linear, color 0.5s ease;
+  -ms-transition: margin 0.2s linear, color 0.5s ease;
+  transition: margin 0.2s linear, color 0.5s ease;
 }
 
-.show-assist {
-  position: absolute;
-  top: 2px;
-  left: 8px;
-  font-size: 12px;
-  margin-left: 0;
-  -webkit-transition: margin-left 0.2s linear;
-  -moz-transition: margin-left 0.2s linear;
-  -ms-transition: margin-left 0.2s linear;
-  transition: margin-left 0.2s linear;
+.show-right-side-panel,
+.hide-left-side-panel {
+  right: 4px;
 }
 
-.show-assist:hover {
-  margin-left: 2px;
-}
-
-.hide-assist:hover {
+.show-right-side-panel:hover,
+.hide-left-side-panel:hover {
   margin-right: 2px;
+  color: #338bb8;
+}
+
+.hide-right-side-panel,
+.show-left-side-panel {
+  left: 4px;
+}
+
+.hide-right-side-panel:hover,
+.show-left-side-panel:hover {
+  margin-left: 2px;
   color: #338bb8;
 }
 
 .left-nav-visible {
   flex: 0 0 15em;
   background-color: lightgrey;
-}
-
-/* Main page */
-
-.page-content {
-  flex: 2;
-  padding: 1em;
-  position: relative;
 }
 
 h1 {
