--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3266,3 +3266,40 @@ input[type='password']::-ms-reveal {
   right: 8px;
   font-size: 15px;
 }
+
+.search-container {
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -ms-flex: 1 1 29px;
+  flex: 1 1 29px;
+  padding: 10px;
+}
+
+.search-container > input {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border: 1px solid #DDD;
+  border-right: none;
+  flex: 1 1 100%;
+  height: 27px;
+  box-shadow: none;
+}
+
+.search-container > a {
+  cursor: pointer;
+  flex: 0 0 31px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border: 1px solid #DDD;
+  box-shadow: none;
+  font-size: 15px;
+  line-height: 29px;
+  background-color: #f9f9f9;
+  width: 31px;
+  height: 29px;
+}
+
+.search-container > a > i {
+  margin-left: 8px;
+}
