HUE-3294 [editor] Avoid double loading of JS files
(cherry picked from commit 2228b6a190dba2cc4e63d64f77a76a51b5631ce9)

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -496,3 +496,7 @@ h6 {
   overflow: hidden;
   background-color: #e5e5e5;
 }
+
+.page-content .navbar.navbar-inverse.navbar-fixed-top {
+  position: static;
+}
