HUE-3294 [search] Improve counter display
(cherry picked from commit 729a56004129a0d61134fc3205aee571a3644272)

--- a/apps/search/src/search/static/search/css/search.css
+++ b/apps/search/src/search/static/search/css/search.css
@@ -587,10 +587,9 @@ em {
 
 .big-counter {
   font-size: 4em;
-  padding: .5em;
-  padding-left: 0;
   letter-spacing: .1em;
   line-height: 1.45;
+  text-align: center;
 }
 
 .fields-list {
