--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -178,6 +178,14 @@ body {
   margin: -1px 5px 0 -10px;
 }
 
+.compose-action .dropdown-menu i {
+  color: #338BB8;
+  height: 18px;
+  width: 18px;
+  font-size: 14px;
+  margin: -1px 2px 0 -7px;
+}
+
 .compose-action .dropdown-menu li {
   height: 32px;
 }
