HUE-3294 [oozie] Converted to documentChooser binding
(cherry picked from commit e60903f0797d33d2e39c6b01b2ff433bb9898105)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3303,3 +3303,18 @@ input[type='password']::-ms-reveal {
 .search-container > a > i {
   margin-left: 8px;
 }
+
+.selectize-wrapper {
+  display: inline-block;
+  float:left;
+  margin-right: 4px;
+}
+
+.selectize-input {
+  padding-top: 6px !important;
+  padding-bottom: 5px !important;
+}
+
+.selectize-dropdown {
+  z-index: 10000!important;
+}
