HUE-5288 [editor] Pressing enter key on the export results modal shouldn't open a file chooser
(cherry picked from commit e805d63565335c956db101c090db4879c9260935)

--- a/desktop/libs/notebook/src/notebook/static/notebook/css/notebook.css
+++ b/desktop/libs/notebook/src/notebook/static/notebook/css/notebook.css
@@ -714,12 +714,8 @@ input[type="text"].filechooser-input {
   margin-bottom: 0;
 }
 
-.fileChooserBtn {
-  height: 31px;
-}
-
 #saveResultsForm .fileChooserBtn {
-  margin-top: -1px;
+  vertical-align: middle;
 }
 
 table.airy tr td {
