--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3271,9 +3271,9 @@ input[type='password']::-ms-reveal {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  -ms-flex: 1 1 29px;
-  flex: 1 1 29px;
-  padding: 10px;
+  -ms-flex: 1 1 36px;
+  flex: 1 1 36px;
+  padding: 10px 10px 5px 10px;
 }
 
 .search-container > input {
