--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -104,7 +104,7 @@ body {
   font-size: 13px;
   border-radius: 2px;
   background-color: #FFF;
-  -webkit-box-shadow: 0 2px 8px rgba(0,0,0,.18);
+  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, .18);
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.18), 0 2px 8px 0 rgba(0, 0, 0, 0.13);
 }
 
@@ -304,15 +304,68 @@ body {
 }
 
 .left-nav {
-  -ms-flex: 0 0 0;
-  flex: 0 0 0;
+  position:absolute;
+  background-color: #003F6C;
+  color: #f9f9f9;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 0;
   overflow-x: hidden;
   white-space: nowrap;
-  background-color: lightgrey;
-  -webkit-transition: 0.4s flex;
-  -moz-transition: 0.4s flex;
-  -ms-transition: 0.4s flex;
-  transition: 0.4s flex;
+  -webkit-transition: 0.2s width;
+  -moz-transition: 0.2s width;
+  -ms-transition: 0.2s width;
+  transition: 0.2s width;
+}
+
+.left-nav-menu {
+  margin: 10px 0 0 0;
+}
+
+.left-nav-menu li {
+  padding-left: 10px;
+  list-style: none;
+  line-height: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.left-nav-menu li:not(.divider) {
+  background-color: transparent;
+  -webkit-transition: 0.4s background-color;
+  -moz-transition: 0.4s background-color;
+  -ms-transition: 0.4s background-color;
+  transition: 0.4s background-color;
+}
+
+.left-nav-menu li:not(.divider):hover {
+  background-color: rgba(240, 240, 240, 0.8);
+}
+
+.left-nav-menu li a {
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #f9f9f9;
+  -webkit-transition: 0.4s color;
+  -moz-transition: 0.4s color;
+  -ms-transition: 0.4s color;
+  transition: 0.4s color;
+}
+
+.left-nav-menu li:not(.divider):hover a {
+  color: #003F6C;
+}
+
+.left-nav-menu li a:hover {
+  text-decoration: none;
+}
+
+.left-nav-visible {
+  width: 200px;
+  -webkit-box-shadow: 0 2px 8px rgba(0,0,0,.18);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.18), 0 2px 8px 0 rgba(0, 0, 0, 0.13);
 }
 
 .assist-panel {
@@ -404,12 +457,6 @@ body {
 .show-left-side-panel:hover {
   margin-left: 2px;
   color: #338bb8;
-}
-
-.left-nav-visible {
-  -ms-flex: 0 0 15em;
-  flex: 0 0 15em;
-  background-color: lightgrey;
 }
 
 h1 {
